Remove white space around pages, attempt to fix overflowing div

--- a/index.css
+++ b/index.css
@@ -1,4 +1,8 @@
-    
+body{
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+} 
 header{
     background-image: url("./images/home/header.jpg");
     background-position: center center;
