--- a/vacanthouses.css
+++ b/vacanthouses.css
@@ -1,4 +1,9 @@
 @media only screen and (min-width:100px){
+    body{
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+    }
 header{
     background-image: url("./images/header2.jpg");
    
@@ -60,23 +65,25 @@ ul{
     position: relative;
     font-size: 1.3em;
     
-    
 }
-
+@media only screen and (min-width:100px){
 #house{
     background-color:  #C4C4C4;
     position: relative;
-    width: 80%;
+    
     max-width: auto;
     height: 300px;
     left: 100px;
     margin-top: 100px;
-    margin-right: 300px;
+    
     border-radius: 35px;
     box-sizing: border-box;
     display: flex;
-
-   
+    padding-right: 50px;
+    margin-left: 30px;
+    margin-right: 75px;
+    width: 1000px;
+}
 }
 
 #house button{
